--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -19,6 +19,18 @@
   }
 }
 
+/* Remove number input arrows (Chrome, Edge, Safari) */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove number input arrows (Firefox) */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
