--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,7 +18,9 @@
     --foreground: #ededed;
   }
 }
-
+html {
+  scroll-behavior: smooth;
+}
 /* Remove number input arrows (Chrome, Edge, Safari) */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
